# ComfyUI-HuggingFace

./: README.md  README_IT.md  __init__.py  config.py  pyproject.toml
api/: huggingface.py
downloader/: chunk_downloader.py  manager.py
server/: utils.py
server/routes/: CancelDownload.py  ClearHistory.py  DownloadModel.py  GetBaseModels.py  GetModelDetails.py  GetModelDirs.py  GetModelTypes.py  GetStatus.py  OpenPath.py  RetryDownload.py  SearchModels.py  __init__.py
utils/: __init__.py  helpers.py
web/js/: huggingfaceDownloader.css  huggingfaceDownloader.js
web/js/api/: civitai.js  huggingface.js
web/js/ui/: UI.js  feedback.js  previewRenderer.js  searchRenderer.js  statusRenderer.js  templates.js
web/js/ui/handlers/: downloadHandler.js  eventListeners.js  searchHandler.js  settingsHandler.js  statusHandler.js
web/js/utils/: cookies.js  dom.js
