[project]
name = "civicomfy"
description = "HuggingFace seamlessly integrates Civitai's vast model repository directly into ComfyUI, allowing you to search, download, and organize AI models without leaving your workflow."
version = "1.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MoonGoblinDev/HuggingFace"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "moongoblin"
DisplayName = "HuggingFace"
Icon = ""
